<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/aqua"
    card_view:cardCornerRadius="@dimen/card_corner_radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:background="@drawable/cardview_gradient">

        <TextView
            android:id="@+id/tTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/book_requests_librarian_activity_title_value"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/fineLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/tTitle"
            android:weightSum="1"
            android:paddingStart="@dimen/padding_start"
            android:paddingEnd="@dimen/padding_end">

            <TextView
                android:id="@+id/tFine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/book_requests_librarian_activity_fine"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tFineValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/book_requests_librarian_activity_fine_value"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ISBN10Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/fineLayout"
            android:weightSum="1"
            android:paddingStart="@dimen/padding_start"
            android:paddingEnd="@dimen/padding_end">

            <TextView
                android:id="@+id/tISBN10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/book_requests_librarian_activity_ISBN10"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tISBN10Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/book_requests_librarian_activity_ISBN10_value"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/userIDLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/ISBN10Layout"
            android:weightSum="1"
            android:paddingStart="@dimen/padding_start"
            android:paddingEnd="@dimen/padding_end">

            <TextView
                android:id="@+id/tUserID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/book_requests_librarian_activity_user"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tUserIDValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/book_requests_librarian_activity_user_ID_value"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/requestStatusLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/userIDLayout"
            android:weightSum="1"
            android:paddingStart="@dimen/padding_start"
            android:paddingEnd="@dimen/padding_end">

            <TextView
                android:id="@+id/tRequestStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/book_requests_activity_request_status"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tRequestStatusValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/book_request_adapter_librarian_activity_request_status_accepted"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/requestStatusLayout"
            android:weightSum="0.9"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bAcceptReq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/book_request_adapter_librarian_activity_button_accept"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/bClearRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/book_request_adapter_librarian_activity_button_clear_book_returned_in_time"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/bClearFines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/book_request_adapter_librarian_activity_button_clear_fines"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>