<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aqua"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_main_message"
        android:textSize="@dimen/text_size"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/bLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bSignUp"
        android:layout_marginTop="@dimen/spacing"
        android:layout_marginBottom="@dimen/spacing"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        android:text="@string/activity_main_button_login" />

    <Button
        android:id="@+id/bSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bHelp"
        android:layout_marginTop="@dimen/spacing"
        android:layout_marginBottom="@dimen/spacing"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        android:text="@string/activity_main_button_signup" />

    <Button
        android:id="@+id/bHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/spacing"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:text="@string/activity_main_button_help" />

</RelativeLayout>