<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aqua"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_log_in_message"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_marginTop="@dimen/spacing"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        android:orientation="horizontal"
        android:paddingStart="@dimen/padding_start"
        android:paddingEnd="@dimen/padding_end"
        android:weightSum="1" >

        <TextView
            android:id="@+id/tEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/emailValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:autofillHints=""
            android:hint="@string/email_example"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/min_height"
            android:textColorHint="#757575" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLayout"
        android:layout_marginTop="@dimen/spacing"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        android:orientation="horizontal"
        android:paddingStart="@dimen/padding_start"
        android:paddingEnd="@dimen/padding_end"
        android:weightSum="1">

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/activity_sign_up_password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/passwordValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/activity_sign_up_password_value"
            android:autofillHints="@string/activity_sign_up_password_value"
            android:textColor="@color/black"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="@dimen/min_height" />
    </LinearLayout>

    <Button
        android:id="@+id/bLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLayout"
        android:layout_marginTop="@dimen/spacing"
        android:text="@string/activity_log_in_button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>